chore: Add c++14 support

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ model {
         }
     }
 	binaries {
+        all {
+            if (toolChain in GccCompatibleToolChain)
+                cppCompiler.args "-std=c++14", "-Wall", "-Wextra"
+        }
 		withType(GoogleTestTestSuiteBinarySpec) {
             lib library: "googleTest", linkage: "static"
 
