feat: Add observer class and link it to observable

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,12 @@ model {
         failing
     }
 	components {
-		observable(NativeLibrarySpec)
+        observer(NativeLibrarySpec) 
+		observable(NativeLibrarySpec) {
+            sources {
+                cpp.lib library: "observer"
+            }
+        }
 	}
 	repositories {
         libs(PrebuiltLibraries) {
