--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: false
-language: cpp
+language: generic
 
 before_install:
 
@@ -12,7 +12,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-7
-      env: COMPILER=g++-7
+      env: COMPILER_NAME=gcc CXX=g++-7 CC=g++-7
     - compiler: gcc
       addons:
         apt:
@@ -20,7 +20,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
-      env: COMPILER=g++-5
+      env: COMPILER_NAME=gcc CXX=g++-5 CC=g++-5
     - compiler: clang
       addons:
         apt:
@@ -31,7 +31,7 @@ matrix:
             - clang-3.6
             - libc++-dev
       env:
-        - COMPILER=clang++-3.6
+        - COMPILER_NAME=clang CXX=clang++-3.6 CC=clang++-3.6
         - CPLOPT=-stdlib=libc++
 script:
   - ./gtest_build.sh
